# cmake-project-template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  common.h  logger.hpp  src.cmake  wlog.hpp
src/division/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp  test2.cpp  test3.cpp  test4.cpp
unit_tests/: CMakeLists.txt  src.cmake
unit_tests/src/: test.cpp
