cmake_minimum_required (VERSION 3.18) 
cmake_policy(SET CMP0079 NEW)

project(cmake-project-template)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP") 
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4251")

set(CMAKE_CXX_STANDARD 17)
if(MSVC)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
endif(MSVC)

set(CMAKE_CXX_FLAGS_RELEASE "/O2 /MD /D_ITERATOR_DEBUG_LEVEL=0")
set(CMAKE_CXX_FLAGS_DEBUG "/MDd /D_ITERATOR_DEBUG_LEVEL=2")

set(CMAKE_C_FLAGS_RELEASE "/O2 /MD /D_ITERATOR_DEBUG_LEVEL=0")
set(CMAKE_C_FLAGS_DEBUG "/MDd /D_ITERATOR_DEBUG_LEVEL=2")

set(CUDA_NVCC_FLAGS_RELEASE "-O3 -Xcompiler=\"/MD\"")
set(CUDA_NVCC_FLAGS_DEBUG "-G -g -Xcompiler=\"/MDd\"")

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Zi")
set(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /DEBUG")

set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Zi")
set(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /DEBUG")

#set project output directory
SET(PROJECT_OUTPUT_DIR "${PROJECT_BINARY_DIR}/../output")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR} )
set(EXECUTABLE_OUTPUT_PATH "${PROJECT_OUTPUT_DIR}")
set(LIBRARY_OUTPUT_PATH "${PROJECT_OUTPUT_DIR}")

set(CMAKE_TOOLCHAIN_FILE "D:/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(DIVISIBLE_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(DIVISIBLE_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(DIVISIBLE_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

set(DIVISION_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/division)

include_directories(${DIVISIBLE_INSTALL_INCLUDE_DIR})
include_directories(${DIVISION_HEADERS_DIR})

add_subdirectory(src)
add_subdirectory(test)
add_subdirectory(unit_tests)


